upd swagger added new endpoints, fixed some bags
